--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <body>
 
-  <!--==========================
+ <!--==========================
   Header
   ============================-->
   <header id="header">
@@ -47,7 +47,7 @@
 
       <div id="logo" class="pull-left">
         <a href="#hero">
-          <img id="myImage" src="img/logo-header.png" alt="" title="" /></img>
+          <img id="myImage" src="../img/logo-header.png" alt="" title="" /></img>
         </a>
         <!-- Uncomment below if you prefer to use a text logo -->
         <!--<h1><a href="#hero">Regna</a></h1>-->
@@ -57,7 +57,7 @@
         <ul class="nav-menu">
 
           <li>
-            <a href="#">Início</a>
+            <a href="../index.html">Início</a>
           </li>
           <li class="menu-has-children">
             <a href="">Serviços</a>
@@ -66,40 +66,49 @@
                 <a style="pointer-events: none; cursor: pointer;">Fotovoltaica</a>
                 <ul>
                   <li>
-                    <a href="simulador/index.html">Simulador de Placas Solares</a>
+                    <a href="../simulador/index.html">Simulador de Placas Solares</a>
                   </li>
                 </ul>
                 <li class="menu-has-children">
                   <a style="pointer-events: none; cursor: pointer;">Instalações</a>
                   <ul>
                     <li>
-                      <a href="instalacoes/instala.html">Projetos</a>
+                      <a href="instala.html">Projetos</a>
                     </li>
                     <li>
-                      <a href="instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a>
+                      <a href="spda.html">Sistemas de proteção a Descarga atmosférica</a>
                     </li>
                     <li>
-                      <a href="instalacoes/normas.html">Adequação às normas</a>
+                      <a href="normas.html">Adequação às normas</a>
                     </li>
                     <li>
-                      <a href="instalacoes/foodtruck.html">Serviços para Foodtrucks</a>
+                        <a href="telefonia.html">Telefonia e Cabeamento</a>
+                      </li>
+                    <li>
+                      <a href="foodtruck.html">Serviços para Foodtrucks</a>
                     </li>
                     <li>
-                      <a href="instalacoes/termografia.html">Termografia</a>
+                      <a href="termografia.html">Termografia</a>
                     </li>
                   </ul>
-
+                  <li class="menu-has-children">
+                    <a style="pointer-events: none; cursor: pointer;">Automação</a>
+                    <ul>
+                      <li>
+                          <a href="automa.html">Automação de Negócios</a>
+                        </li>
+                    </ul>
                   <li class="menu-has-children">
                     <a style="pointer-events: none; cursor: pointer;">Eficiência</a>
                     <ul>
                       <li>
-                        <a href="eficiencia/lumino.html">Luminotécnico</a>
+                        <a href="../eficiencia/lumino.html">Luminotécnico</a>
                       </li>
                       <li>
-                        <a href="eficiencia/analise.html">Análise de conta de luz</a>
+                        <a href="../eficiencia/analise.html">Análise de conta de luz</a>
                       </li>
                       <li>
-                        <a href="eficiencia/analise.html">Análise de qualidade de energia</a>
+                        <a href="../eficiencia/analise.html">Análise de qualidade de energia</a>
                       </li>
                     </ul>
                   </li>
@@ -109,13 +118,13 @@
               <a href="">E-books</a>
               <ul>
                 <li>
-                  <a href="landing/index.html">8 ideias de como economizar em casa</a>
+                  <a href="../landing/index.html">8 ideias de como economizar em casa</a>
                 </li>
                 <li>
-                  <a href="landing2/index.html">Guia de iluminação</a>
+                  <a href="../landing2/index.html">Guia de iluminação</a>
                 </li>
                 <li>
-                  <a href="landing/index3.html">Como proteger suas instalações elétricas</a>
+                  <a href="../landing/index3.html">Como proteger suas instalações elétricas</a>
                 </li>
                 <li>
                   <a href="landing5/index.html">Como Termografia pode te ajudar a proteger suas instalações</a>
@@ -123,16 +132,16 @@
               </ul>
             </li>
             <li>
-              <!--  <a href="port.html">Portfólio</a> -->
+              <!-- <a href="../port.html">Portfólio</a> -->
             </li>
             <li>
-              <a href="blog">Blog</a>
+              <a href="../blog">Blog</a>
             </li>
             <li>
               <a href="#contact">Contato</a>
             </li>
             <li>
-              <a href="about/index.html">Sobre Nós</a>
+              <a href="../about/index.html">Sobre Nós</a>
             </li>
         </ul>
       </nav>
@@ -140,7 +149,6 @@
     </div>
   </header>
   <!-- #header -->
-
   <!--==========================
     Hero Section
     ============================-->
@@ -197,7 +205,27 @@
             </p>
           </div>
         </div>
+      </div>
+    </section>
+    <section id="call-to-action" style="background: white">
+      <div class="container wow fadeIn">
+        <div class="row">
+          <div class="section-header">
+            <h3 class="section-title" style="color:black; position: relative; margin-bottom: 15px;">Projeto Minha Casa, Minha Vida</h3>
+          </div>
+          <div class="col-lg-7 text-center text-lg-left">
+            <iframe class="videodirecional" width="560" height="315" src="https://www.youtube.com/watch?v=eRUvOIlgTIA" frameborder="0" allow="autoplay; encrypted-media"
+              allowf ullscreen></iframe>
+          </div>
+          <div class="col-lg-4 cta-btn-container text-center">
+            <p style="color:black; text-align: justify;">
+              Em 2018, a ENETEC realizou, em conjunto com a Direcional Engenharia, um projeto de instalações elétricas e cabeamento para o condomínio do projeto "Minha Casa, Minha Vida",
+              Nesse projeto nossa equipe executou os projetos de todas as instalações de prédios, apartamentos e áreas comuns do condominio.
+              Ao fim de 2018, fomos reconhecidos com o segundo lugar do Prêmio Concentra na categoria "Projeto de Alto Impacto".
 
+            </p>
+          </div>
+        </div>
       </div>
     </section>
     <!--==========================
@@ -310,7 +338,15 @@
           <a href="simulador/index.html" class="cta-btn">Simulador</a>
         </p>
       </center>
+      <br>
+      <br>
+      <br>
+      
     </section>
+
+
+
+
     <!-- #facts -->
 
     <!--==========================
@@ -397,10 +433,10 @@
               <div>
                 <i class="fa fa-phone"></i>
                 <p>Telefone: (61) 3107-1036
-                  <br> Diretor Comercial (Igor Lima) (61) 9 9699-5651
+                  <br> Diretora Comercial (Carol) (61) 9 9295-1628
                   <br>
                 </p>
-                <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561996450664&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561986095281&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
                   <br> clicando aqui
                   <br>
                 </a>
@@ -411,7 +447,7 @@
 
           <div class="col-lg-5 col-md-8">
             <div class="form">
-              <form action="https://formspree.io/luiz.fidalgo@enetec.unb.br" method="post" class="contactForm">
+              <form action="https://formspree.io/pedro.oliveira@enetec.unb.br" method="post" class="contactForm">
                 <div class="form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
                   <div class="validation"></div>
@@ -508,5 +544,6 @@
         </script>
         <script async src="js/google_map.js"></script>
 </body>
+<script type="text/javascript" async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/42f1be66-bc99-47d6-9c24-84e976f3010c-loader.js" ></script>
 
 </html>
