--- a/instalacoes/automa.html
+++ b/instalacoes/automa.html
@@ -39,7 +39,8 @@
 
 
 <body>
- <!--==========================
+
+  <!--==========================
   Header
   ============================-->
   <header id="header">
@@ -95,7 +96,7 @@
                     <a style="pointer-events: none; cursor: pointer;">Automação</a>
                     <ul>
                       <li>
-                        <a href="automa.html">Automação Residencial</a>
+                        <a href="automa.html">Automação de Negócios</a>
                       </li>
                     </ul>
                   <li class="menu-has-children">
@@ -150,38 +151,37 @@
   </header>
   <!-- #header -->
 
-  <!--==========================
+<!--==========================
     Hero Section
     ============================-->
-  <section id="hero" style="background: url(../img/spda.jpg) top center fixed;">
-    <div class="icons">
-      <a href="https://www.linkedin.com/company/enetec-consultoria/">
-        <i class="fa fa-linkedin" aria-hidden="true"></i>
-      </a>
-      <a href="https://www.facebook.com/enetec.consultoria/">
-        <i class="fa fa-facebook" aria-hidden="true"></i>
-      </a>
-      <a href="https://www.instagram.com/enetec/">
-        <i class="fa fa-instagram" aria-hidden="true"></i>
-      </a>
-    </div>
-    <div class="hero-container">
-      <h1>Sistemas de Proteção </h1>
-      <h1>a Descargas Atmosféricas</h1>
-      <h2>Você está com problemas elétricos na sua casa/ escritório? </h2>
-      <p>
-        <a href="#about" class="btn-get-started">Saiba como podemos te ajudar</a>
-      </p>
-    </div>
-  </section>
-  <!-- #hero -->
+    <section id="hero" style="background: url(../img/auto.jpg) top center fixed;">
+      <div class="icons">
+        <a href="https://www.linkedin.com/company/enetec-consultoria/">
+          <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.facebook.com/enetec.consultoria/">
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.instagram.com/enetec/">
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
+      </div>
+      <div class="hero-container">
+        <h1>Automação de Negócios</h1>
+        <h2>Automatize as funções do seu négocios e atualize-se</h2>
+        <p>
+          <a href="#about" class="btn-get-started">Saiba como podemos te ajudar</a>
+        </p>
+      </div>
+    </section>
+    <!-- #hero -->
 
   <main id="main">
 
     <!--==========================
       About Us Section
       ============================-->
-    <section id="about" style="background: url(../img/spda2.jpg) top center fixed; background-repeat:no-repeat;">
+    <section id="about" style="background: url(../img/aut.jpg) top center fixed;">
       <div class="container">
         <div class="row about-container">
           <center>
@@ -190,45 +190,45 @@
               <br>
               <h2 class="title">O que é?</h2>
               <p>
-                É um sistema que protege tanto os equipamentos quanto as pessoas de raios. São conhecidos comumente com o nome de para-raios.
+                Atualmente, novos conceitos como Internet das Coisas, 
+                Automação,Inteligência Artificial etc.  
+                parecem ser assuntos que servem apenas para grandes multinacionais como Google, 
+                Microsoft, Apple etc. Porém, essa realidade está mais 
+                próxima do que se imagina. Dentre as mais diversas possibilidades, 
+                está a utilização de microcontroladores.
+                <br>
 
-              </p>
+                Um microcontrolador, basicamente, é uma placa de circuito que integra diversas ferramentas,
+                como sensores, LEDs, botões, dentre outras coisas. Através da programação, é possível realizar uma infinidade
+                de atividades que podem ser automatizadas, integradas com o computador e até mesmo com a internet
+                <h2 class="title">Por quê implementar?</h2>
+                Existem diversas aplicações dessa tecnologia. Na área de segurança, microcontroladores são utilizados em conjunto com sensores, fechaduras eletrônicas e alarmes residenciais para gerir todo o sistema de vigilância. Além disso, eletrodomésticos estão cada vez mais utilizando tais componentes eletrônicos, 
+                principalmente para trazer novas funcionalidades que visem incrementar a experiência do usuário. É vasto o uso de microcontroladores hoje em dia.
+                <br>
+                <br>
+                <h2 class="title">Podemos te ajudar</h2>
 
-              <div class=" wow fadeInUp" data-wow-delay="0.4s">
-                <h4 class="title">
-                  <a href="">Por quê implementar?</a>
-                </h4>
                 <p class="description">
-                  De acordo com a norma, é obrigatório para prédios acima de 30 metros. Contudo, é essencial para qualquer edíficio/residência,
-                  pois as consequências de descargas atmosféricas podem ser catastróficas: Segundo o G1, 116 pessoas morrem
-                  de raios por ano no Brasil. Além disso, é muito comum equipamentos eletrônicos queimarem por isso.
-
+                    
+                    Essa área de automação está inclusa no mundo da engenharia elétrica. 
+                    Você quer saber se é possível incrementar o seu negócio? 
+                    Entre em contato conosco aqui, ficaremos contentes em construir uma solução personalizada 
+                    para os nossos clientes.
+                  <a href="#contact">
+                    Fale conosco.
+                  </a>
+                  Faremos um orçamento gratuito sem compromisso. Ficaremos felizes em ajudar.
                 </p>
+                <br>
+                <br>
 
-
-                <div class=" wow fadeInUp" data-wow-delay="0.4s">
-                  <h4 class="title">
-                    <a href="">O que fazer?</a>
-                  </h4>
-                  <p class="description">
-                    A ENETEC oferece serviços de consultoria em projetos de para-raios. Não corra riscos desnecessários!
-                    <a href="#contact">
-                      Fale conosco.
-                    </a>
-                    Faremos um orçamento gratuito sem compromisso. Ficaremos felizes em ajudar.
-                  </p>
-                  <br>
-                  <br>
-                </div>
-
-              </div>
+            </div>
           </center>
-          </div>
-
         </div>
+
+      </div>
     </section>
     <!-- #about -->
-
     <!--==========================
       Services Section
       ============================-->
