--- a/instalacoes/telefonia.html
+++ b/instalacoes/telefonia.html
@@ -39,7 +39,8 @@
 
 
 <body>
- <!--==========================
+
+  <!--==========================
   Header
   ============================-->
   <header id="header">
@@ -150,38 +151,37 @@
   </header>
   <!-- #header -->
 
-  <!--==========================
+<!--==========================
     Hero Section
     ============================-->
-  <section id="hero" style="background: url(../img/spda.jpg) top center fixed;">
-    <div class="icons">
-      <a href="https://www.linkedin.com/company/enetec-consultoria/">
-        <i class="fa fa-linkedin" aria-hidden="true"></i>
-      </a>
-      <a href="https://www.facebook.com/enetec.consultoria/">
-        <i class="fa fa-facebook" aria-hidden="true"></i>
-      </a>
-      <a href="https://www.instagram.com/enetec/">
-        <i class="fa fa-instagram" aria-hidden="true"></i>
-      </a>
-    </div>
-    <div class="hero-container">
-      <h1>Sistemas de Proteção </h1>
-      <h1>a Descargas Atmosféricas</h1>
-      <h2>Você está com problemas elétricos na sua casa/ escritório? </h2>
-      <p>
-        <a href="#about" class="btn-get-started">Saiba como podemos te ajudar</a>
-      </p>
-    </div>
-  </section>
-  <!-- #hero -->
+    <section id="hero" style="background: url(../img/tele.jpg) top center fixed;">
+      <div class="icons">
+        <a href="https://www.linkedin.com/company/enetec-consultoria/">
+          <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.facebook.com/enetec.consultoria/">
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.instagram.com/enetec/">
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
+      </div>
+      <div class="hero-container">
+        <h1>Telefonia e Cabeamento</h1>
+        <h2>Analisamos e fazemos projetos de redes telefonicas</h2>
+        <p>
+          <a href="#about" class="btn-get-started">Saiba como podemos te ajudar</a>
+        </p>
+      </div>
+    </section>
+    <!-- #hero -->
 
   <main id="main">
 
     <!--==========================
       About Us Section
       ============================-->
-    <section id="about" style="background: url(../img/spda2.jpg) top center fixed; background-repeat:no-repeat;">
+    <section id="about" style="background: url(../img/tel.jpg) top center fixed;">
       <div class="container">
         <div class="row about-container">
           <center>
@@ -190,45 +190,31 @@
               <br>
               <h2 class="title">O que é?</h2>
               <p>
-                É um sistema que protege tanto os equipamentos quanto as pessoas de raios. São conhecidos comumente com o nome de para-raios.
+                Com o passar dos anos, 
+                os modelos de telefonia foram aperfeiçoados e plataformas com e sem fio tornaram-se 
+                parte do cotidiano da maior parte das populações. Entretanto, 
+                a simplicidade com que estes são utilizados pelos seus consumidores 
+                finais disfarça a complexidade do planejamento e execução dos grandes 
+                sistemas que possibilitam tamanha comodidade. Para isso, existem os projetos de telefonia e cabeamento estruturado. 
 
-              </p>
-
-              <div class=" wow fadeInUp" data-wow-delay="0.4s">
-                <h4 class="title">
-                  <a href="">Por quê implementar?</a>
-                </h4>
                 <p class="description">
-                  De acordo com a norma, é obrigatório para prédios acima de 30 metros. Contudo, é essencial para qualquer edíficio/residência,
-                  pois as consequências de descargas atmosféricas podem ser catastróficas: Segundo o G1, 116 pessoas morrem
-                  de raios por ano no Brasil. Além disso, é muito comum equipamentos eletrônicos queimarem por isso.
-
+                    Nós da ENETEC Consultoria Júnior desenvolvemos projetos de sistemas de telefonia, interfonia, e antena coletiva, promovendo conforto e bem-estar ao cliente. Planejamos o posicionamento de cada saída destes sistemas no interior do imóvel e nas suas estruturas externas, 
+                    além do dimensionamento ideal dos cabos e tubulações que os conectam as suas respectivas centrais.
+                  <a href="#contact">
+                    Fale conosco.
+                  </a>
+                  Faremos um orçamento gratuito sem compromisso. Ficaremos felizes em ajudar.
                 </p>
+                <br>
+                <br>
 
-
-                <div class=" wow fadeInUp" data-wow-delay="0.4s">
-                  <h4 class="title">
-                    <a href="">O que fazer?</a>
-                  </h4>
-                  <p class="description">
-                    A ENETEC oferece serviços de consultoria em projetos de para-raios. Não corra riscos desnecessários!
-                    <a href="#contact">
-                      Fale conosco.
-                    </a>
-                    Faremos um orçamento gratuito sem compromisso. Ficaremos felizes em ajudar.
-                  </p>
-                  <br>
-                  <br>
-                </div>
-
-              </div>
+            </div>
           </center>
-          </div>
-
         </div>
+
+      </div>
     </section>
     <!-- #about -->
-
     <!--==========================
       Services Section
       ============================-->
