--- a/about/index.html
+++ b/about/index.html
@@ -42,8 +42,7 @@
 </head>
 
 <body>
-
-  <!--==========================
+ <!--==========================
   Header
   ============================-->
   <header id="header">
@@ -53,6 +52,8 @@
         <a href="#hero">
           <img id="myImage" src="../img/logo-header.png" alt="" title="" /></img>
         </a>
+        <!-- Uncomment below if you prefer to use a text logo -->
+        <!--<h1><a href="#hero">Regna</a></h1>-->
       </div>
 
       <nav id="nav-menu-container">
@@ -70,22 +71,36 @@
                   <li>
                     <a href="../simulador/index.html">Simulador de Placas Solares</a>
                   </li>
-
                 </ul>
                 <li class="menu-has-children">
                   <a style="pointer-events: none; cursor: pointer;">Instalações</a>
                   <ul>
                     <li>
-                      <a href="../instalacoes/instala.html">Projetos</a>
+                      <a href="instala.html">Projetos</a>
                     </li>
                     <li>
-                      <a href="../instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a>
+                      <a href="spda.html">Sistemas de proteção a Descarga atmosférica</a>
                     </li>
                     <li>
-                      <a href="../instalacoes/normas.html">Adequação às normas</a>
+                      <a href="normas.html">Adequação às normas</a>
+                    </li>
+                    <li>
+                        <a href="telefonia.html">Telefonia e Cabeamento</a>
+                      </li>
+                    <li>
+                      <a href="foodtruck.html">Serviços para Foodtrucks</a>
+                    </li>
+                    <li>
+                      <a href="termografia.html">Termografia</a>
                     </li>
                   </ul>
-
+                  <li class="menu-has-children">
+                    <a style="pointer-events: none; cursor: pointer;">Automação</a>
+                    <ul>
+                      <li>
+                          <a href="automa.html">Automação de Negócios</a>
+                        </li>
+                    </ul>
                   <li class="menu-has-children">
                     <a style="pointer-events: none; cursor: pointer;">Eficiência</a>
                     <ul>
@@ -129,7 +144,7 @@
               <a href="#contact">Contato</a>
             </li>
             <li>
-              <a href="#">Sobre Nós</a>
+              <a href="../about/index.html">Sobre Nós</a>
             </li>
         </ul>
       </nav>
@@ -231,7 +246,7 @@
   </main>
 
 
-        <!-- #about -->
+    <!-- #about -->
     <!--==========================
       Contact Section
       ============================-->
@@ -266,10 +281,10 @@
                 <div>
                   <i class="fa fa-phone"></i>
                   <p>Telefone: (61) 3107-1036
-                    <br> Diretor Comercial (Igor Lima) (61) 9 9699-5651
+                    <br> Diretora Comercial (Carol) (61) 9 9295-1628
                     <br>
                   </p>
-                  <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561996450664&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                  <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561986095281&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
                     <br> clicando aqui
                     <br>
                   </a>
@@ -280,7 +295,7 @@
   
             <div class="col-lg-5 col-md-8">
               <div class="form">
-                <form action="https://formspree.io/luiz.fidalgo@enetec.unb.br" method="post" class="contactForm">
+                <form action="https://formspree.io/pedro.oliveira@enetec.unb.br" method="post" class="contactForm">
                   <div class="form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
                     <div class="validation"></div>
@@ -314,8 +329,8 @@
           </div>
       </section>
       <!-- #contact -->
-  
-    </main>
+
+  </main>
 
 
 
@@ -381,5 +396,6 @@
         <script src="../js/main2.js"></script>
         <script src="simulador.js"></script>
 </body>
+<script type="text/javascript" async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/42f1be66-bc99-47d6-9c24-84e976f3010c-loader.js" ></script>
 
 </html>
