--- a/eficiencia/lumino.html
+++ b/eficiencia/lumino.html
@@ -41,8 +41,7 @@
 
 
 <body>
-
-  <!--==========================
+ <!--==========================
   Header
   ============================-->
   <header id="header">
@@ -76,33 +75,42 @@
                   <a style="pointer-events: none; cursor: pointer;">Instalações</a>
                   <ul>
                     <li>
-                      <a href="../instalacoes/instala.html">Projetos</a>
+                      <a href="instala.html">Projetos</a>
                     </li>
                     <li>
-                      <a href="../instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a>
+                      <a href="spda.html">Sistemas de proteção a Descarga atmosférica</a>
                     </li>
                     <li>
-                      <a href="../instalacoes/normas.html">Adequação às normas</a>
+                      <a href="normas.html">Adequação às normas</a>
                     </li>
                     <li>
-                      <a href="../instalacoes/foodtruck.html">Serviços para Foodtrucks</a>
+                        <a href="telefonia.html">Telefonia e Cabeamento</a>
+                      </li>
+                    <li>
+                      <a href="foodtruck.html">Serviços para Foodtrucks</a>
                     </li>
                     <li>
-                      <a href="../instalacoes/termografia.html">Termografia</a>
+                      <a href="termografia.html">Termografia</a>
                     </li>
                   </ul>
-
+                  <li class="menu-has-children">
+                    <a style="pointer-events: none; cursor: pointer;">Automação</a>
+                    <ul>
+                      <li>
+                        <a href="automa.html">Automação Residencial</a>
+                      </li>
+                    </ul>
                   <li class="menu-has-children">
                     <a style="pointer-events: none; cursor: pointer;">Eficiência</a>
                     <ul>
                       <li>
-                        <a href="lumino.html">Luminotécnico</a>
+                        <a href="../eficiencia/lumino.html">Luminotécnico</a>
                       </li>
                       <li>
-                        <a href="analise.html">Análise de conta de luz</a>
+                        <a href="../eficiencia/analise.html">Análise de conta de luz</a>
                       </li>
                       <li>
-                        <a href="analise.html">Análise de qualidade de energia</a>
+                        <a href="../eficiencia/analise.html">Análise de qualidade de energia</a>
                       </li>
                     </ul>
                   </li>
@@ -279,7 +287,8 @@
 
 
 
-    <!-- #about -->
+
+     <!-- #about -->
     <!--==========================
       Contact Section
       ============================-->
@@ -314,10 +323,10 @@
                 <div>
                   <i class="fa fa-phone"></i>
                   <p>Telefone: (61) 3107-1036
-                    <br> Diretor Comercial (Igor Lima) (61) 9 9699-5651
+                    <br> Diretora Comercial (Carol) (61) 9 9295-1628
                     <br>
                   </p>
-                  <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561996450664&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                  <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561986095281&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
                     <br> clicando aqui
                     <br>
                   </a>
@@ -328,7 +337,7 @@
   
             <div class="col-lg-5 col-md-8">
               <div class="form">
-                <form action="https://formspree.io/luiz.fidalgo@enetec.unb.br" method="post" class="contactForm">
+                <form action="https://formspree.io/pedro.oliveira@enetec.unb.br" method="post" class="contactForm">
                   <div class="form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
                     <div class="validation"></div>
@@ -362,8 +371,10 @@
           </div>
       </section>
       <!-- #contact -->
-  
-    </main>
+
+  </main>
+
+
 
   <!--==========================
       Footer
@@ -423,5 +434,6 @@
         </script>
         <script async src="js/google_map.js"></script>
 </body>
+<script type="text/javascript" async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/42f1be66-bc99-47d6-9c24-84e976f3010c-loader.js" ></script>
 
 </html>
