--- a/instalacoes/normas.html
+++ b/instalacoes/normas.html
@@ -83,13 +83,22 @@
                       <a href="normas.html">Adequação às normas</a>
                     </li>
                     <li>
+                        <a href="telefonia.html">Telefonia e Cabeamento</a>
+                      </li>
+                    <li>
                       <a href="foodtruck.html">Serviços para Foodtrucks</a>
                     </li>
                     <li>
                       <a href="termografia.html">Termografia</a>
                     </li>
                   </ul>
-
+                  <li class="menu-has-children">
+                    <a style="pointer-events: none; cursor: pointer;">Automação</a>
+                    <ul>
+                      <li>
+                        <a href="automa.html">Automação Residencial</a>
+                      </li>
+                    </ul>
                   <li class="menu-has-children">
                     <a style="pointer-events: none; cursor: pointer;">Eficiência</a>
                     <ul>
@@ -267,7 +276,7 @@
     <!-- #services -->
 
 
-        <!-- #about -->
+     <!-- #about -->
     <!--==========================
       Contact Section
       ============================-->
@@ -302,10 +311,10 @@
                 <div>
                   <i class="fa fa-phone"></i>
                   <p>Telefone: (61) 3107-1036
-                    <br> Diretor Comercial (Igor Lima) (61) 9 9699-5651
+                    <br> Diretora Comercial (Carol) (61) 9 9295-1628
                     <br>
                   </p>
-                  <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561996450664&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                  <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561986095281&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
                     <br> clicando aqui
                     <br>
                   </a>
@@ -316,7 +325,7 @@
   
             <div class="col-lg-5 col-md-8">
               <div class="form">
-                <form action="https://formspree.io/luiz.fidalgo@enetec.unb.br" method="post" class="contactForm">
+                <form action="https://formspree.io/pedro.oliveira@enetec.unb.br" method="post" class="contactForm">
                   <div class="form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
                     <div class="validation"></div>
@@ -350,8 +359,8 @@
           </div>
       </section>
       <!-- #contact -->
-  
-    </main>
+
+  </main>
 
 
 
@@ -413,5 +422,6 @@
         </script>
         <script async src="js/google_map.js"></script>
 </body>
+<script type="text/javascript" async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/42f1be66-bc99-47d6-9c24-84e976f3010c-loader.js" ></script>
 
 </html>
