--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
             <h3 class="section-title" style="color:black; position: relative; margin-bottom: 15px;">Projeto Minha Casa, Minha Vida</h3>
           </div>
           <div class="col-lg-7 text-center text-lg-left">
-            <iframe class="videodirecional" width="560" height="315" src="https://www.youtube.com/watch?v=eRUvOIlgTIA" frameborder="0" allow="autoplay; encrypted-media"
-              allowf ullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/eRUvOIlgTIA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="col-lg-4 cta-btn-container text-center">
             <p style="color:black; text-align: justify;">
