--- a/simulador/index.html
+++ b/simulador/index.html
@@ -201,7 +201,7 @@
 
 
 
-                  <form method="POST" class="contact2-form validate-form" action="https://formspree.io/pedro.oliveira@enetec.unb.br">
+                  <form method="POST" class="contact2-form validate-form" action="https://formspree.io/lucas.ferreira@enetec.unb.br">
                     Estado
                     <div class="form-group">
                       <!---->
@@ -477,7 +477,7 @@
   
             <div class="col-lg-5 col-md-8">
               <div class="form">
-                <form action="https://formspree.io/pedro.oliveira@enetec.unb.br" method="post" class="contactForm">
+                <form action="https://formspree.io/luiz.fidalgo@enetec.unb.br" method="post" class="contactForm">
                   <div class="form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
                     <div class="validation"></div>
