--- a/index.html
+++ b/index.html
@@ -73,29 +73,29 @@
                   <a style="pointer-events: none; cursor: pointer;">Instalações</a>
                   <ul>
                     <li>
-                      <a href="instala.html">Projetos</a>
+                      <a href="../instalaçoes/instala.html">Projetos</a>
                     </li>
                     <li>
-                      <a href="spda.html">Sistemas de proteção a Descarga atmosférica</a>
+                      <a href="../instalaçoes/spda.html">Sistemas de proteção a Descarga atmosférica</a>
                     </li>
                     <li>
-                      <a href="normas.html">Adequação às normas</a>
+                      <a href="../instalaçoes/normas.html">Adequação às normas</a>
                     </li>
                     <li>
-                        <a href="telefonia.html">Telefonia e Cabeamento</a>
+                        <a href="../instalaçoes/instala.htmltelefonia.html">Telefonia e Cabeamento</a>
                       </li>
                     <li>
-                      <a href="foodtruck.html">Serviços para Foodtrucks</a>
+                      <a href="../instalaçoes/instala.htmlfoodtruck.html">Serviços para Foodtrucks</a>
                     </li>
                     <li>
-                      <a href="termografia.html">Termografia</a>
+                      <a href="../instalaçoes/instala.htmltermografia.html">Termografia</a>
                     </li>
                   </ul>
                   <li class="menu-has-children">
                     <a style="pointer-events: none; cursor: pointer;">Automação</a>
                     <ul>
                       <li>
-                          <a href="automa.html">Automação de Negócios</a>
+                          <a href="../instalaçoes/instala.htmlautoma.html">Automação de Negócios</a>
                         </li>
                     </ul>
                   <li class="menu-has-children">
@@ -432,7 +432,7 @@
               <div>
                 <i class="fa fa-phone"></i>
                 <p>Telefone: (61) 3107-1036
-                  <br> Diretora Comercial (Carol) (61) 9 9295-1628
+                  <br> Diretora Comercial (Igor) (61) 9 96995651
                   <br>
                 </p>
                 <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561986095281&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
