--- a/index.html
+++ b/index.html
@@ -82,20 +82,20 @@
                       <a href="../instalaçoes/normas.html">Adequação às normas</a>
                     </li>
                     <li>
-                        <a href="../instalaçoes/instala.htmltelefonia.html">Telefonia e Cabeamento</a>
+                        <a href="../instalaçoes/telefonia.html">Telefonia e Cabeamento</a>
                       </li>
                     <li>
-                      <a href="../instalaçoes/instala.htmlfoodtruck.html">Serviços para Foodtrucks</a>
+                      <a href="../instalaçoes/foodtruck.html">Serviços para Foodtrucks</a>
                     </li>
                     <li>
-                      <a href="../instalaçoes/instala.htmltermografia.html">Termografia</a>
+                      <a href="../instalaçoes/termografia.html">Termografia</a>
                     </li>
                   </ul>
                   <li class="menu-has-children">
                     <a style="pointer-events: none; cursor: pointer;">Automação</a>
                     <ul>
                       <li>
-                          <a href="../instalaçoes/instala.htmlautoma.html">Automação de Negócios</a>
+                          <a href="../instalaçoes/automa.html">Automação de Negócios</a>
                         </li>
                     </ul>
                   <li class="menu-has-children">
