--- a/index.html
+++ b/index.html
@@ -73,29 +73,29 @@
                   <a style="pointer-events: none; cursor: pointer;">Instalações</a>
                   <ul>
                     <li>
-                      <a href="../instalaçoes/instala.html">Projetos</a>
+                      <a href="../instalacoes/instala.html">Projetos</a>
                     </li>
                     <li>
-                      <a href="../instalaçoes/spda.html">Sistemas de proteção a Descarga atmosférica</a>
+                      <a href="../instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a>
                     </li>
                     <li>
-                      <a href="../instalaçoes/normas.html">Adequação às normas</a>
+                      <a href="../instalacoes/normas.html">Adequação às normas</a>
                     </li>
                     <li>
-                        <a href="../instalaçoes/telefonia.html">Telefonia e Cabeamento</a>
+                        <a href="../instalacoes/telefonia.html">Telefonia e Cabeamento</a>
                       </li>
                     <li>
-                      <a href="../instalaçoes/foodtruck.html">Serviços para Foodtrucks</a>
+                      <a href="../instalacoes/foodtruck.html">Serviços para Foodtrucks</a>
                     </li>
                     <li>
-                      <a href="../instalaçoes/termografia.html">Termografia</a>
+                      <a href="../instalacoes/termografia.html">Termografia</a>
                     </li>
                   </ul>
                   <li class="menu-has-children">
                     <a style="pointer-events: none; cursor: pointer;">Automação</a>
                     <ul>
                       <li>
-                          <a href="../instalaçoes/automa.html">Automação de Negócios</a>
+                          <a href="../instalacoes/automa.html">Automação de Negócios</a>
                         </li>
                     </ul>
                   <li class="menu-has-children">
