--- a/simulador/index.html
+++ b/simulador/index.html
@@ -201,7 +201,7 @@
 
 
 
-                  <form method="POST" class="contact2-form validate-form" action="https://formspree.io/marketing@enetec.unb.br">
+                  <form method="POST" class="contact2-form validate-form" action="https://formspree.io/lucas.ferreira@enetec.unb.br">
                     Estado
                     <div class="form-group">
                       <!---->
